<resources>
    <string name="app_name">HB Case</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_exit_label">Press BACK again to exit</string>
    <string name="hint_search">Search</string>
    <string name="chip_movie">Movie</string>
    <string name="chip_music">Music</string>
    <string name="chip_ebook">Ebook</string>
    <string name="chip_podcast">Podcast</string>
    <string name="toolbar_detail_title">Detail</string>
    <string name="text_track_name">Track</string>
    <string name="text_collection_name">Collection</string>
    <string name="text_artist_name">Artist</string>
    <string name="text_description">Description</string>
    <string name="text_price">Price</string>
    <string name="text_release_date">Release Date</string>
</resources>